# tachyconnect

./: .bumpversion.cfg  .gitignore  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py  tachy_console.py
Communication/: ReplyHandler.py  TachyRequest.py  geo_com.py  ts_control.py  ts_function.py
src/: tachy_console.py
src/tachyconnect/: GSI_Parser.py  ReplyHandler.py  TachyJoystick.py  TachyRequest.py  gc_constants.py  ts_control.py
src/tachyconnect/ui/: tachy_joystick.py  tachy_joystick.ui
src/ui/: main_window.py  tachy_console.ui  tachy_joystick.py  tachy_joystick.ui
ui/: tachy_console.ui
