[metadata]
name = tachyconnect
version = 0.4.1
author = Christian Trapp
author_email = trapp@gbv.de
description = Leica total stations and Qt via python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gbv/tachyconnect
project_urls =
    Bug Tracker = https://github.com/gbv/tachyconnect/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src